--- a/ChangeIncludeHeaderBackslashToSlash/ChangeIncludeHeaderBackslashToSlash.csproj
+++ b/ChangeIncludeHeaderBackslashToSlash/ChangeIncludeHeaderBackslashToSlash.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FileUtil.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
